--- a/style.css
+++ b/style.css
@@ -5,6 +5,24 @@ body {
 	margin: 0;
 }
 
+.center-content{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.box green {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.box black {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 /* When writing CSS classes it is VERY important that you use hyphen delimited strings (square-div and NOT squareDiv) */
 /* Addtionally, you should know what the class does just by looking at the name (the name should be DESCRIPTIVE) */
 /* When thinking about sizing elements on your page, there are many different units you can use = https://www.w3schools.com/cssref/css_units.asp */
@@ -26,10 +44,6 @@ body {
 	display: flex ;
 }
 
-.restrict-img-size {
-	max-height: 99%;
-	max-width: 99%;
-}
 /* When possible, organize CSS classes in alphabetical order */
 .black {
 	background-color: #000000;
@@ -39,4 +53,38 @@ body {
 	background-color: #7CFC00;
 }
 
+.hide{
+	visibility: hidden;
+}
 
+.restrict-img-size {
+	max-height: 100%;
+	max-width: 100%;
+}
+
+.col {
+	height: 100%;
+	width: calc(100%/3);
+}
+
+.row {
+	height: 50%;
+	width: 100%;
+	display: flex;
+}
+
+.opaque {
+	opacity: 0.25;
+}
+
+.no-cursor:hover {
+	cursor: default;
+}
+
+.button:active {
+	transform: scale(0.95, 0.95);
+}
+
+.el.classList.add{
+visibility: collapse; 
+}
